Fix main icon on mobile card
Fix main icon on mobile card

--- a/app.json
+++ b/app.json
@@ -164,6 +164,9 @@
 			],
 			"mobile": {
 				"components": [
+		            {
+						"id": "icon"
+					},
 					{
 						"id": "battery",
 						"capabilities": [
