--- a/app.json
+++ b/app.json
@@ -4,8 +4,8 @@
 		"en": "Remotec Technology",
 		"nl": "Remotec Technology"
 	},
-	"version": "0.0.2",
-	"compatibility": ">=1.0.5",
+	"version": "1.0.0",
+	"compatibility": ">=1.3.0",
 	"author": {
 		"name": "Ted Tolboom",
 		"email": "dTNL.Homey@gmail.com"
@@ -119,7 +119,7 @@
 								}
 	              },
 							{
-								"id": "Key Pressed 2 time",
+								"id": "Key Pressed 2 times",
 								"label": {
 									"en": "Pressed 2x",
 									"nl": "2x ingedrukt"
@@ -164,7 +164,7 @@
 			],
 			"mobile": {
 				"components": [
-		            {
+					{
 						"id": "icon"
 					},
 					{
