--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
 		"en": "Remotec Technology",
 		"nl": "Remotec Technology"
 	},
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"compatibility": ">=1.3.0",
 	"author": {
 		"name": "Ted Tolboom",
@@ -38,6 +38,10 @@
 				"title": {
 					"en": "Scene is activated",
 					"nl": "Scene is geactiveerd"
+				},
+				"hint": {
+					"en": "This card will only get triggered if the button and scene match the state of the dropdown fields.",
+					"nl": "Deze kaart wordt alleen geactiveerd wanneer de knop en scene overeenkomen met de toestand van de gekozen opties."
 				},
 				"args": [
 					{
@@ -142,8 +146,61 @@
 	            ]
 	          }
 	        ]
-	      }
-			]
+	      },
+			{
+				"id": "ZRC-90_button",
+				"title": {
+					"en": "A button has been pressed",
+					"nl": "Een knop is ingedrukt"
+				},
+				"hint": {
+					"en": "This card will trigger on any button pressed and provides the button and scene tokens.",
+					"nl": "Deze kaart wordt geactiveerd bij iedere knop die ingedrukt wordt en biedt de knop en scene tokens aan."
+				},
+				"args": [
+					{
+						"name": "device",
+						"type": "device",
+						"filter": "driver_id=ZRC-90"
+						}
+					],
+				"tokens": [
+					{
+						"name": "button",
+						"type": "string",
+						"title": {
+							"en": "button",
+							"nl": "knop"
+						},
+						"example": "0"
+						},
+					{
+						"name": "scene",
+						"type": "string",
+						"title": {
+							"en": "scene",
+							"nl": "scene"
+						},
+						"example": "Button pressed (test)"
+						}
+					]
+				}
+			],
+		"conditions": [{
+				"id": "ZRC-90_low_battery",
+				"title": {
+					"en": "Battery !{{alarm activated|in healthy condition}}",
+					"nl": "Batterij !{{alarm geactiveerd|in gezonde toestand}}"
+				},
+				"args": [
+					{
+						"name": "device",
+						"type": "device",
+						"filter": "driver_id=ZRC-90"
+					}
+				]
+			}
+		]
 	},
 	"drivers": [
 		{
