--- a/app.json
+++ b/app.json
@@ -12,11 +12,19 @@
     "security",
     "appliances"
   ],
-  "version": "2.0.0",
+  "version": "2.0.1",
   "compatibility": ">=1.5.0",
   "author": {
     "name": "Ted Tolboom",
     "email": "ttolboom@gmail.com"
+  },
+  "contributing": {
+    "donate": {
+      "paypal": {
+        "email": "dtnl.homey@gmail.com",
+        "currency": "EUR"
+      }
+    }
   },
   "tags": {
     "en": [
@@ -99,28 +107,21 @@
           }
         },
         {
-          "id": "Fan only",
+          "id": "Fan Only",
           "title": {
             "en": "Fan only",
             "nl": "Ventilator"
           }
         },
         {
-          "id": "Dry air",
+          "id": "Dry Air",
           "title": {
             "en": "Dry air",
             "nl": "Droge lucht"
           }
         },
         {
-          "id": "Auto changeover",
-          "title": {
-            "en": "Auto changeover",
-            "nl": "Auto overgang"
-          }
-        },
-        {
-          "id": "Away",
+          "id": "AWAY",
           "title": {
             "en": "Away",
             "nl": "Afwezig"
@@ -130,11 +131,11 @@
       "getable": true,
       "setable": true
     },
-    "Thermostat_FAN_mode": {
+    "FAN_mode": {
       "type": "enum",
       "title": {
-        "en": "Thermostat Fan mode",
-        "nl": "Thermostaat Fan modus"
+        "en": "Fan mode",
+        "nl": "Fan modus"
       },
       "desc": {
         "en": "Fan mode",
@@ -387,7 +388,7 @@
         "large": "/drivers/ZRC-90/assets/images/large.jpg",
         "small": "/drivers/ZRC-90/assets/images/small.jpg"
       },
-      "class": "zwavecontroller",
+      "class": "sensor",
       "capabilities": [
         "measure_battery",
         "alarm_battery"
@@ -505,7 +506,7 @@
         "target_temperature",
         "AC_onoff",
         "AC_mode",
-        "Thermostat_FAN_mode",
+        "FAN_mode",
         "measure_battery",
         "alarm_battery"
       ],
@@ -549,7 +550,7 @@
           {
             "id": "picker",
             "capabilities": [
-              "Thermostat_FAN_mode"
+              "FAN_mode"
             ],
             "options": {
               "showTitle": true
