--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"dependencies": {
 		"git-branch": "^1.0.0",
 		"homey-log": "^1.0.1",
-		"homey-meshdriver": "git+https://github.com/athombv/node-homey-meshdriver.git"
+		"homey-meshdriver": "^1.2.7"
 	},
 	"devDependencies": {},
 	"scripts": {
