--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
     "security",
     "appliances"
   ],
-  "version": "2.0.2",
+  "version": "2.0.3",
   "compatibility": ">=1.5.0",
   "author": {
     "name": "Ted Tolboom",
@@ -344,22 +344,7 @@
         ]
       }
     ],
-    "conditions": [
-      {
-        "id": "ZRC-90_low_battery",
-        "title": {
-          "en": "Battery !{{alarm activated|in healthy condition}}",
-          "nl": "Batterij !{{alarm geactiveerd|in gezonde toestand}}"
-        },
-        "args": [
-          {
-            "name": "device",
-            "type": "device",
-            "filter": "driver_id=ZRC-90"
-          }
-        ]
-      }
-    ],
+    "conditions": [],
     "actions": [
       {
         "id": "DEV_actions",
