--- a/app.json
+++ b/app.json
@@ -493,6 +493,67 @@
             ]
           }
         ]
+      },
+      {
+        "id": "action_ZXT_SetSetpoint",
+        "title": {
+          "en": "Set a setpoint of a thermostat mode",
+          "nl": "Stel de temperatuur in van een thermostaat modus"
+        },
+        "hint": {
+          "en": "Change the setpoint of a specific thermostat mode. Note: does NOT activate this mode",
+          "nl": "Stel de temperatuur in van een thermostaat modus. Let op: activeert deze modus niet"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=ZXT-120|ZXT-600"
+          },
+          {
+            "name": "setPointType",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "Heating 1",
+                "label": {
+                  "en": "Heat",
+                  "nl": "Verwarm"
+                }
+              },
+              {
+                "id": "Cooling 1",
+                "label": {
+                  "en": "Cool",
+                  "nl": "Koel"
+                }
+              },
+              {
+                "id": "Auto changeover",
+                "label": {
+                  "en": "Auto",
+                  "nl": "Auto"
+                }
+              },
+              {
+                "id": "Dry Air",
+                "label": {
+                  "en": "Dry air",
+                  "nl": "Droge lucht"
+                }
+              }
+            ]
+          },
+          {
+            "name": "setPointValue",
+            "type": "range",
+            "min": 16,
+            "max": 30,
+            "step": 0.5,
+            "label": "°C",
+            "labelDecimals": 1
+          }
+        ]
       }
     ]
   },
@@ -775,11 +836,11 @@
           ]
         },
         {
-          "id": "Temperature_compensation",
+          "id": "Temperature_calibration",
           "value": "0",
           "type": "dropdown",
           "label": {
-            "en": "Sensor temperature compensation"
+            "en": "Calibrate Temperature reading"
           },
           "hint": {
             "en": "This parameter is used to compensate the temperature error at temperature sensor"
@@ -793,67 +854,67 @@
             {
               "id": "0",
               "label": {
-                "en": "0°C (default)"
+                "en": "Measured temperature (default)"
               }
             },
             {
               "id": "1",
               "label": {
-                "en": "+ 1°C compentation"
+                "en": "Measured temperature + 1.0°C"
               }
             },
             {
               "id": "2",
               "label": {
-                "en": "+ 2°C compentation"
+                "en": "Measured temperature + 2.0°C"
               }
             },
             {
               "id": "3",
               "label": {
-                "en": "+ 3°C compentation"
+                "en": "Measured temperature + 3.0°C"
               }
             },
             {
               "id": "4",
               "label": {
-                "en": "+ 4°C compentation"
+                "en": "Measured temperature + 4.0°C"
               }
             },
             {
               "id": "5",
               "label": {
-                "en": "+ 5°C compentation"
+                "en": "Measured temperature + 5.0°C"
               }
             },
             {
               "id": "255",
               "label": {
-                "en": "- 1°C compentation"
+                "en": "Measured temperature - 1.0°C"
               }
             },
             {
               "id": "254",
               "label": {
-                "en": "- 2°C compentation"
+                "en": "Measured temperature - 2.0°C"
               }
             },
             {
               "id": "253",
               "label": {
-                "en": "- 3°C compentation"
+                "en": "Measured temperature - 3.0°C"
               }
             },
             {
               "id": "252",
               "label": {
-                "en": "- 4°C compentation"
+                "en": "Measured temperature - 4.0°C"
               }
             },
             {
               "id": "251",
               "label": {
-                "en": "- 5°C compentation"
+                "en": "Measured temperature - 5.0°C"
               }
             }
           ]
@@ -1066,60 +1127,60 @@
           "type": "number"
         },
         {
-          "id": "IR_emitter",
+          "id": "IR_emitter_control",
           "value": "255",
+          "type": "dropdown",
           "label": {
-            "en": "Set built-in IR Emitter Control"
+            "en": "Use built-in IR emitter"
           },
           "hint": {
-            "en": "If there have two or more Air Conditioners with the same code set that are used in the same room, user can disable the built-in IR emitter and use the external IR emitter cable to control each air conditioner individually\r\n0 or 255\r\n(0x00 or 0xFF)\r\n0(0x00): Disable\r\n255(0xFF): Enable (Default)\r\n"
+            "en": "Note: If more than one air conditioners with the same code set are used in the same room, user can disable the built-in IR emitter and use the external IR emitter cable to control each air conditioner individually"
           },
           "zwave": {
             "index": 32,
             "size": 1,
             "signed": false
           },
-          "type": "dropdown",
           "values": [
-            {
-              "id": "0",
-              "label": {
-                "en": "Disabled"
-              }
-            },
             {
               "id": "255",
               "label": {
-                "en": "Enabled (default)"
+                "en": "Built-in IR emitter enabled (default)."
+              }
+            },
+            {
+              "id": "0",
+              "label": {
+                "en": "Built-in IR emitter disabled"
               }
             }
           ]
         },
         {
-          "id": "AC_swing",
+          "id": "AC_swing_mode",
           "value": "1",
+          "type": "dropdown",
           "label": {
-            "en": "Control AC SWING function"
+            "en": "Air conditioner “SWING” control"
           },
           "hint": {
-            "en": "Default: 0x01\r\nRange 0 to 1 (0x00 or 0x01)\r\n0(0x00) : Swing OFF\r\n1(0x01) : Swing Auto (Default)\r\n"
+            "en": "Define if air conditioner fan “SWING” mode should be enabled or not"
           },
           "zwave": {
             "index": 33,
             "size": 1
           },
-          "type": "dropdown",
           "values": [
-            {
-              "id": "0",
-              "label": {
-                "en": "Disabled"
-              }
-            },
             {
               "id": "1",
               "label": {
-                "en": "Enabled (default)"
+                "en": "Swing AUTO (default)"
+              }
+            },
+            {
+              "id": "0",
+              "label": {
+                "en": "Swing OFF"
               }
             }
           ]
@@ -1128,7 +1189,7 @@
           "id": "Report_threshold",
           "value": "0",
           "label": {
-            "en": "Condition report Temperature threshold"
+            "en": "Temperature reporting threshold"
           },
           "hint": {
             "en": "0(0x00) = Disable (Default)\r\n(for saving battery life)\r\nAuto report if room temperature is different from last report.\r\n1(0x01) = 1°F (0.5°C)\r\n2(0x02) = 2°F (1°C) \r\n3(0x03) = 3°F (1.5°C)\r\n4(0x04) = 4°F (2°C)\r\n5(0x05) = 5°F (2.5°C)\r\n6(0x06) = 6°F (3°C)\r\n7(0x07) = 7°F (3.5°C)\r\n8(0x08) = 8°F (4°C)\r\n"
@@ -1341,6 +1402,60 @@
               "label": {
                 "en": "Measured temperature - 5.0°C"
               }
+            }
+          ]
+        },
+        {
+          "type": "group",
+          "label": {
+            "en": "Set polling interval (minutes)"
+          },
+          "collapsed": false,
+          "children": [
+            {
+              "id": "poll_interval_THERMOSTAT_MODE",
+              "value": 120,
+              "label": {
+                "en": "Thermostat Mode"
+              },
+              "hint": {
+                "en": "Set polling interval Thermostat Mode (minutes), 0 = disabled, default = 120 minutes"
+              },
+              "attr": {
+                "min": 0,
+                "max": 1440
+              },
+              "type": "number"
+            },
+            {
+              "id": "poll_interval_THERMOSTAT_SETPOINT",
+              "value": 180,
+              "label": {
+                "en": "Thermostat Setpoint"
+              },
+              "hint": {
+                "en": "Set polling interval Thermostat Setpoint (minutes), 0 = disabled, default = 180 minutes"
+              },
+              "attr": {
+                "min": 0,
+                "max": 1440
+              },
+              "type": "number"
+            },
+            {
+              "id": "poll_interval_THERMOSTAT_FAN_MODE",
+              "value": 0,
+              "label": {
+                "en": "Thermostat Fan Mode"
+              },
+              "hint": {
+                "en": "Set polling interval Thermostat Fan Mode (minutes), 0 = disabled, default = 0"
+              },
+              "attr": {
+                "min": 0,
+                "max": 1440
+              },
+              "type": "number"
             }
           ]
         }
