--- a/app.json
+++ b/app.json
@@ -436,7 +436,7 @@
       {
         "id": "action_ZXT_SetFanSpeed",
         "title": {
-          "en": "Set Fan Speed"
+          "en": "Set Fan Speed mode"
         },
         "args": [
           {
@@ -488,6 +488,37 @@
                 "label": {
                   "en": "High",
                   "nl": "Hoog"
+                }
+              }
+            ]
+          }
+        ]
+      },
+      {
+        "id": "action_ZXT_SetFanSwing",
+        "title": {
+          "en": "Set Fan “SWING” mode"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=ZXT-120|ZXT-600"
+          },
+          {
+            "name": "mode",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "1",
+                "label": {
+                  "en": "Swing AUTO (default)"
+                }
+              },
+              {
+                "id": "0",
+                "label": {
+                  "en": "Swing OFF"
                 }
               }
             ]
