--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
 	"main": "app.js",
 	"requires": true,
 	"dependencies": {
+		"eslint-config-athom": "^1.0.0",
 		"git-branch": "^1.0.0",
 		"homey-log": "^1.0.1",
-		"homey-meshdriver": "^1.2.23"
+		"homey-meshdriver": "^1.2.25"
 	},
 	"devDependencies": {},
 	"scripts": {
