--- a/app.json
+++ b/app.json
@@ -557,6 +557,7 @@
           11
         ],
         "productId": 34064,
+        "includeSecure": false,
         "productDocumentation": "http://products.z-wavealliance.org/ProductManual/File?folder=&filename=Manuals/1584/F-BW8510xx (ZRC-90xx) User Manual_V1.01_20151030.pdf",
         "pid": 1584,
         "imageRemotePath": "http://products.z-wavealliance.org/ProductImages/Index?productName=ZC10-15120001",
